<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
            <variable
                name="detailBarViewModel"
                type="com.example.mobg_54018.fragment.detailbar.DetailBarViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/goBackToHomePage"
            android:layout_width="35dp"
            android:layout_height="31dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/returnToLoginPageImageText"
            android:onClick="@{()->detailBarViewModel.onNavigateToHomePage()}"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/barNameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:text="@{detailBarViewModel.bar.name}"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goBackToHomePage" />

        <ImageView
            android:id="@+id/locationIconDetailBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/barNameDetail"
            app:layout_constraintTop_toBottomOf="@+id/barNameDetail"
            app:srcCompat="@drawable/ic_baseline_location_on_24" />

        <TextView
            android:id="@+id/adressBarDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:text="@{detailBarViewModel.bar.address}"
            android:textColor="@color/blackMidOpaMessage"
            app:layout_constraintBottom_toBottomOf="@+id/locationIconDetailBar"
            app:layout_constraintStart_toEndOf="@+id/locationIconDetailBar"
            app:layout_constraintTop_toBottomOf="@+id/barNameDetail" />

        <androidx.cardview.widget.CardView
            android:id="@+id/mapCardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="40dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationIconDetailBar"
            >


            <fragment
                android:layout_gravity="center_horizontal|center_vertical"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/aboutDetailBar"
            android:textColor="@color/black"
            android:textSize="@dimen/sub_title_size"
            app:layout_constraintBottom_toTopOf="@+id/descriptionBarDetail"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/descriptionBarDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="40dp"
            android:lineSpacingExtra="4sp"
            android:text="@{detailBarViewModel.bar.description}"
            android:textColor="@color/blackHighOpaMessage"
            app:layout_constraintBottom_toTopOf="@+id/numbersOfCapture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/captureBarDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"


            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"


            android:insetBottom="0dp"
            android:minWidth="0dp"

            android:minHeight="35dp"
            android:onClick="@{()-> detailBarViewModel.captureBar()}"
            android:stateListAnimator="@null"
            android:text="@string/captur"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:buttonColor="@{detailBarViewModel.colorCapturedButton}"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/numbersOfCapture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/numbersOfCaptureText"
            android:textColor="@color/black"
            android:textSize="@dimen/sub_title_size"
            app:layout_constraintBottom_toTopOf="@+id/numbersCaptureNumberCard"
            app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:id="@+id/numbersCaptureNumberCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/text_roundable_layout"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/captureBarDetail"
            app:layout_constraintEnd_toEndOf="@+id/numbersOfCapture"
            app:layout_constraintStart_toStartOf="@+id/numbersOfCapture">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:color="@color/white"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@{detailBarViewModel.numberOfCaptures}"
                android:textColor="@color/black"
                android:textSize="@dimen/little_title_size" />
        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>